--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="main-nav">
           <a class="logo" href="./index.html">Web<span class="web">Studio</span></a>
           <ul class="first-navi">
-            <li class="main-list"><a class="main-link" href="./index.html">Studio</a></li>
+            <li class="main-list"><a class="main-link current" href="./index.html">Studio</a></li>
             <li class="main-list"><a class="main-link" href="">Portfolio</a></li>
             <li class="main-list"><a class="main-link" href="">Contacts</a></li>
           </ul>
@@ -45,18 +45,30 @@
           <h2 class="visually-hidden">Treść</h2>
           <ul class="plan-lists">
             <li class="plan-list">
+              <svg class="advantages-icon" viewBox="0 0 12 20">
+                <use href="./images/icons.svg#antenna-1"></use>
+              </svg>
               <h3 class="text-title">Strategy</h3>
               <p class="text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
             </li>
             <li class="plan-list">
+              <svg class="advantages-icon" viewBox="0 0 12 20">
+                <use href="./images/icons.svg#clock-1"></use>
+              </svg>
               <h3 class="text-title">Punctuality</h3>
               <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li class="plan-list">
+              <svg class="advantages-icon" viewBox="0 0 12 20">
+                <use href="./images/icons.svg#diagram-1"></use>
+              </svg>
               <h3 class="text-title">Diligence</h3>
               <p class="text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li class="plan-list">
+              <svg class="advantages-icon" viewBox="0 0 12 20">
+                <use href="./images/icons.svg#astronaut-1"></use>
+              </svg>
               <h3 class="text-title">Technologies</h3>
               <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
@@ -73,6 +85,36 @@
                 <h3 class="text-title">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
               </div>
+              <ul class="social-links">
+                <li class="social-link">
+                  <a href="https://www.instagram.com">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link">
+                  <a href="https://www.twitter.com">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link">
+                  <a href="https://www.facebook.com">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link">
+                  <a href="https://www.linkedin.com">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="our-team-list">
               <img src="./images/tom-ford.jpg" alt="Tom Ford Frontend Developer" width="264" />
@@ -80,6 +122,36 @@
                 <h3 class="text-title">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
               </div>
+              <ul class="social-links">
+                <li class="social-link">
+                  <a href="https://www.instagram.com">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link">
+                  <a href="https://www.twitter.com">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link">
+                  <a href="https://www.facebook.com">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link">
+                  <a href="https://www.linkedin.com">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="our-team-list">
               <img src="./images/camila-garcia.jpg" alt="Camila Garcia Marketing" width="264" />
@@ -87,6 +159,36 @@
                 <h3 class="text-title">Camila Garcia</h3>
                 <p class="text">Marketing</p>
               </div>
+              <ul class="social-links">
+                <li class="social-link">
+                  <a href="https://www.instagram.com">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link">
+                  <a href="https://www.twitter.com">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link">
+                  <a href="https://www.facebook.com">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link">
+                  <a href="https://www.linkedin.com">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="our-team-list">
               <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson UI Designer" width="264" />
@@ -94,6 +196,36 @@
                 <h3 class="text-title">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
               </div>
+              <ul class="social-links">
+                <li class="social-link">
+                  <a href="https://www.instagram.com">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link">
+                  <a href="https://www.twitter.com">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link">
+                  <a href="https://www.facebook.com">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link">
+                  <a href="https://www.linkedin.com">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -150,8 +282,43 @@
     </main>
     <footer class="info">
       <div class="container">
-        <a class="logo" href="./index.html">Web<span class="web">Studio</span></a>
-        <p class="info-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div>
+          <a class="logo" href="./index.html">Web<span class="web">Studio</span></a>
+          <p class="info-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
+        <div class="socials">
+          <h2 class="footer-social-title">Social Media</h2>
+          <ul class="social-links">
+            <li class="social-link">
+              <a href="https://www.instagram.com">
+                <svg class="social-icon">
+                  <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-link">
+              <a href="https://www.twitter.com">
+                <svg class="social-icon">
+                  <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-link">
+              <a href="https://www.facebook.com">
+                <svg class="social-icon">
+                  <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-link">
+              <a href="https://www.linkedin.com">
+                <svg class="social-icon">
+                  <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
