--- a/index.html
+++ b/index.html
@@ -45,30 +45,38 @@
           <h2 class="visually-hidden">Treść</h2>
           <ul class="plan-lists">
             <li class="plan-list">
-              <svg class="advantages-icon" viewBox="0 0 12 20">
-                <use href="./images/icons.svg#antenna-1"></use>
-              </svg>
+              <div class="icon-container">
+                <svg class="advantages-icon" viewBox="0 0 12 20">
+                  <use href="./images/icons.svg#antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="text-title">Strategy</h3>
               <p class="text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
             </li>
             <li class="plan-list">
-              <svg class="advantages-icon" viewBox="0 0 12 20">
-                <use href="./images/icons.svg#clock-1"></use>
-              </svg>
+              <div class="icon-container">
+                <svg class="advantages-icon" viewBox="0 0 12 20">
+                  <use href="./images/icons.svg#clock-1"></use>
+                </svg>
+              </div>
               <h3 class="text-title">Punctuality</h3>
               <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li class="plan-list">
-              <svg class="advantages-icon" viewBox="0 0 12 20">
-                <use href="./images/icons.svg#diagram-1"></use>
-              </svg>
+              <div class="icon-container">
+                <svg class="advantages-icon" viewBox="0 0 12 20">
+                  <use href="./images/icons.svg#diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="text-title">Diligence</h3>
               <p class="text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li class="plan-list">
-              <svg class="advantages-icon" viewBox="0 0 12 20">
-                <use href="./images/icons.svg#astronaut-1"></use>
-              </svg>
+              <div class="icon-container">
+                <svg class="advantages-icon" viewBox="0 0 12 20">
+                  <use href="./images/icons.svg#astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="text-title">Technologies</h3>
               <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
@@ -85,36 +93,38 @@
                 <h3 class="text-title">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
               </div>
-              <ul class="social-links">
-                <li class="social-link">
-                  <a href="https://www.instagram.com">
-                    <svg class="social-icon">
-                      <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-link">
-                  <a href="https://www.twitter.com">
-                    <svg class="social-icon">
-                      <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-link">
-                  <a href="https://www.facebook.com">
-                    <svg class="social-icon">
-                      <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-link">
-                  <a href="https://www.linkedin.com">
-                    <svg class="social-icon">
-                      <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="social-container">
+                <ul class="social-links">
+                  <li class="social-link">
+                    <a href="https://www.instagram.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.twitter.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.facebook.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.linkedin.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="our-team-list">
               <img src="./images/tom-ford.jpg" alt="Tom Ford Frontend Developer" width="264" />
@@ -122,36 +132,38 @@
                 <h3 class="text-title">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
               </div>
-              <ul class="social-links">
-                <li class="social-link">
-                  <a href="https://www.instagram.com">
-                    <svg class="social-icon">
-                      <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-link">
-                  <a href="https://www.twitter.com">
-                    <svg class="social-icon">
-                      <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-link">
-                  <a href="https://www.facebook.com">
-                    <svg class="social-icon">
-                      <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-link">
-                  <a href="https://www.linkedin.com">
-                    <svg class="social-icon">
-                      <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="social-container">
+                <ul class="social-links">
+                  <li class="social-link">
+                    <a href="https://www.instagram.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.twitter.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.facebook.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.linkedin.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="our-team-list">
               <img src="./images/camila-garcia.jpg" alt="Camila Garcia Marketing" width="264" />
@@ -159,36 +171,38 @@
                 <h3 class="text-title">Camila Garcia</h3>
                 <p class="text">Marketing</p>
               </div>
-              <ul class="social-links">
-                <li class="social-link">
-                  <a href="https://www.instagram.com">
-                    <svg class="social-icon">
-                      <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-link">
-                  <a href="https://www.twitter.com">
-                    <svg class="social-icon">
-                      <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-link">
-                  <a href="https://www.facebook.com">
-                    <svg class="social-icon">
-                      <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-link">
-                  <a href="https://www.linkedin.com">
-                    <svg class="social-icon">
-                      <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="social-container">
+                <ul class="social-links">
+                  <li class="social-link">
+                    <a href="https://www.instagram.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.twitter.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.facebook.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.linkedin.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="our-team-list">
               <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson UI Designer" width="264" />
@@ -196,36 +210,38 @@
                 <h3 class="text-title">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
               </div>
-              <ul class="social-links">
-                <li class="social-link">
-                  <a href="https://www.instagram.com">
-                    <svg class="social-icon">
-                      <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-link">
-                  <a href="https://www.twitter.com">
-                    <svg class="social-icon">
-                      <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-link">
-                  <a href="https://www.facebook.com">
-                    <svg class="social-icon">
-                      <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-link">
-                  <a href="https://www.linkedin.com">
-                    <svg class="social-icon">
-                      <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="social-container">
+                <ul class="social-links">
+                  <li class="social-link">
+                    <a href="https://www.instagram.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.twitter.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.facebook.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.linkedin.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
