--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <ul class="plan-lists">
             <li class="plan-list">
               <div class="icon-container">
-                <svg class="advantages-icon" viewBox="0 0 12 20">
+                <svg class="advantages-icon" width="64px" height="64">
                   <use href="./images/icons.svg#antenna-1"></use>
                 </svg>
               </div>
@@ -55,7 +55,7 @@
             </li>
             <li class="plan-list">
               <div class="icon-container">
-                <svg class="advantages-icon" viewBox="0 0 12 20">
+                <svg class="advantages-icon" width="64px" height="64">
                   <use href="./images/icons.svg#clock-1"></use>
                 </svg>
               </div>
@@ -64,7 +64,7 @@
             </li>
             <li class="plan-list">
               <div class="icon-container">
-                <svg class="advantages-icon" viewBox="0 0 12 20">
+                <svg class="advantages-icon" width="64px" height="64">
                   <use href="./images/icons.svg#diagram-1"></use>
                 </svg>
               </div>
@@ -73,7 +73,7 @@
             </li>
             <li class="plan-list">
               <div class="icon-container">
-                <svg class="advantages-icon" viewBox="0 0 12 20">
+                <svg class="advantages-icon" width="64px" height="64">
                   <use href="./images/icons.svg#astronaut-1"></use>
                 </svg>
               </div>
@@ -92,38 +92,38 @@
               <div class="our-team-names">
                 <h3 class="text-title">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
-              </div>
-              <div class="social-container">
-                <ul class="social-links">
-                  <li class="social-link">
-                    <a href="https://www.instagram.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-link">
-                    <a href="https://www.twitter.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-link">
-                    <a href="https://www.facebook.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-link">
-                    <a href="https://www.linkedin.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
+                <div class="social-container">
+                  <ul class="social-links">
+                    <li class="social-link">
+                      <a href="https://www.instagram.com">
+                        <svg class="social-icon">
+                          <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-link">
+                      <a href="https://www.twitter.com">
+                        <svg class="social-icon">
+                          <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-link">
+                      <a href="https://www.facebook.com">
+                        <svg class="social-icon">
+                          <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-link">
+                      <a href="https://www.linkedin.com">
+                        <svg class="social-icon">
+                          <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="our-team-list">
@@ -131,38 +131,38 @@
               <div class="our-team-names">
                 <h3 class="text-title">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
-              </div>
-              <div class="social-container">
-                <ul class="social-links">
-                  <li class="social-link">
-                    <a href="https://www.instagram.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-link">
-                    <a href="https://www.twitter.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-link">
-                    <a href="https://www.facebook.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-link">
-                    <a href="https://www.linkedin.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
+                <div class="social-container">
+                  <ul class="social-links">
+                    <li class="social-link">
+                      <a href="https://www.instagram.com">
+                        <svg class="social-icon">
+                          <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-link">
+                      <a href="https://www.twitter.com">
+                        <svg class="social-icon">
+                          <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-link">
+                      <a href="https://www.facebook.com">
+                        <svg class="social-icon">
+                          <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-link">
+                      <a href="https://www.linkedin.com">
+                        <svg class="social-icon">
+                          <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="our-team-list">
@@ -170,38 +170,38 @@
               <div class="our-team-names">
                 <h3 class="text-title">Camila Garcia</h3>
                 <p class="text">Marketing</p>
-              </div>
-              <div class="social-container">
-                <ul class="social-links">
-                  <li class="social-link">
-                    <a href="https://www.instagram.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-link">
-                    <a href="https://www.twitter.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-link">
-                    <a href="https://www.facebook.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-link">
-                    <a href="https://www.linkedin.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
+                <div class="social-container">
+                  <ul class="social-links">
+                    <li class="social-link">
+                      <a href="https://www.instagram.com">
+                        <svg class="social-icon">
+                          <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-link">
+                      <a href="https://www.twitter.com">
+                        <svg class="social-icon">
+                          <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-link">
+                      <a href="https://www.facebook.com">
+                        <svg class="social-icon">
+                          <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-link">
+                      <a href="https://www.linkedin.com">
+                        <svg class="social-icon">
+                          <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="our-team-list">
@@ -209,38 +209,38 @@
               <div class="our-team-names">
                 <h3 class="text-title">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
-              </div>
-              <div class="social-container">
-                <ul class="social-links">
-                  <li class="social-link">
-                    <a href="https://www.instagram.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-link">
-                    <a href="https://www.twitter.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-link">
-                    <a href="https://www.facebook.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-link">
-                    <a href="https://www.linkedin.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
+                <div class="social-container">
+                  <ul class="social-links">
+                    <li class="social-link">
+                      <a href="https://www.instagram.com">
+                        <svg class="social-icon">
+                          <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-link">
+                      <a href="https://www.twitter.com">
+                        <svg class="social-icon">
+                          <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-link">
+                      <a href="https://www.facebook.com">
+                        <svg class="social-icon">
+                          <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-link">
+                      <a href="https://www.linkedin.com">
+                        <svg class="social-icon">
+                          <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
           </ul>
@@ -251,42 +251,60 @@
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="our-portfolio-lists">
             <li class="our-portfolio-list">
-              <img src="./images/banking-app.jpg" alt="Application" width="360" />
+              <div class="aplication-image">
+                <img src="./images/banking-app.jpg" alt="Application" width="360" />
+                <p class="aplication-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="our-portfolio-names">
                 <h3 class="text-title">Banking App</h3>
                 <p class="text">App</p>
               </div>
             </li>
             <li class="our-portfolio-list">
-              <img src="./images/cashless-payments.jpg" alt="Smartfon and terminal" width="360" />
+              <div class="aplication-image">
+                <img src="./images/cashless-payments.jpg" alt="Smartfon and terminal" width="360" />
+                <p class="aplication-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="our-portfolio-names">
                 <h3 class="text-title">Cashless Payment</h3>
                 <p class="text">Marketing</p>
               </div>
             </li>
             <li class="our-portfolio-list">
-              <img src="./images/meditation-app.jpg" alt="Laptop and smartfon" width="360" />
+              <div class="aplication-image">
+                <img src="./images/meditation-app.jpg" alt="Laptop and smartfon" width="360" />
+                <p class="aplication-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="our-portfolio-names">
                 <h3 class="text-title">Meditation App</h3>
                 <p class="text">App</p>
               </div>
             </li>
             <li class="our-portfolio-list">
-              <img src="./images/taxi-service.jpg" alt="Car" width="360" />
+              <div class="aplication-image">
+                <img src="./images/taxi-service.jpg" alt="Car" width="360" />
+                <p class="aplication-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="our-portfolio-names">
                 <h3 class="text-title">Taxi Service</h3>
                 <p class="text">Marketing</p>
               </div>
             </li>
             <li class="our-portfolio-list">
-              <img src="./images/screen-illustrations.jpg" alt="Smartfon" width="360" />
+              <div class="aplication-image">
+                <img src="./images/screen-illustrations.jpg" alt="Smartfon" width="360" />
+                <p class="aplication-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="our-portfolio-names">
                 <h3 class="text-title">Screen Illustrations</h3>
                 <p class="text">Design</p>
               </div>
             </li>
             <li class="our-portfolio-list">
-              <img src="./images/online-courses.jpg" alt="Woman with smartfon" width="360" />
+              <div class="aplication-image">
+                <img src="./images/online-courses.jpg" alt="Woman with smartfon" width="360" />
+                <p class="aplication-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="our-portfolio-names">
                 <h3 class="text-title">Online Courses</h3>
                 <p class="text">Marketing</p>
@@ -298,12 +316,12 @@
     </main>
     <footer class="info">
       <div class="container">
-        <div>
+        <div class="info-container">
           <a class="logo" href="./index.html">Web<span class="web">Studio</span></a>
           <p class="info-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
         <div class="socials">
-          <h2 class="footer-social-title">Social Media</h2>
+          <p class="footer-social-title">Social Media</p>
           <ul class="social-links">
             <li class="social-link">
               <a href="https://www.instagram.com">
