--- a/index.html
+++ b/index.html
@@ -92,38 +92,36 @@
               <div class="our-team-names">
                 <h3 class="text-title">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
-                <div class="social-container">
-                  <ul class="social-links">
-                    <li class="social-link">
-                      <a href="https://www.instagram.com">
-                        <svg class="social-icon">
-                          <use href="./images/icons.svg#instagram-2" width="40" height="40"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-link">
-                      <a href="https://www.twitter.com">
-                        <svg class="social-icon">
-                          <use href="./images/icons.svg#twitter-1" width="40" height="40"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-link">
-                      <a href="https://www.facebook.com">
-                        <svg class="social-icon">
-                          <use href="./images/icons.svg#facebook-1" width="40" height="40"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-link">
-                      <a href="https://www.linkedin.com">
-                        <svg class="social-icon">
-                          <use href="./images/icons.svg#linkedin-1" width="40" height="40"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                <ul class="social-links">
+                  <li class="social-link">
+                    <a href="https://www.instagram.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#instagram-2" width="40" height="40"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.twitter.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#twitter-1" width="40" height="40"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.facebook.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#facebook-1" width="40" height="40"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.linkedin.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#linkedin-1" width="40" height="40"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-list">
@@ -131,38 +129,36 @@
               <div class="our-team-names">
                 <h3 class="text-title">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
-                <div class="social-container">
-                  <ul class="social-links">
-                    <li class="social-link">
-                      <a href="https://www.instagram.com">
-                        <svg class="social-icon">
-                          <use href="./images/icons.svg#instagram-2" width="40" height="40"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-link">
-                      <a href="https://www.twitter.com">
-                        <svg class="social-icon">
-                          <use href="./images/icons.svg#twitter-1" width="40" height="40"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-link">
-                      <a href="https://www.facebook.com">
-                        <svg class="social-icon">
-                          <use href="./images/icons.svg#facebook-1" width="40" height="40"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-link">
-                      <a href="https://www.linkedin.com">
-                        <svg class="social-icon">
-                          <use href="./images/icons.svg#linkedin-1" width="40" height="40"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                <ul class="social-links">
+                  <li class="social-link">
+                    <a href="https://www.instagram.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#instagram-2" width="40" height="40"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.twitter.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#twitter-1" width="40" height="40"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.facebook.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#facebook-1" width="40" height="40"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.linkedin.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#linkedin-1" width="40" height="40"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-list">
@@ -170,38 +166,36 @@
               <div class="our-team-names">
                 <h3 class="text-title">Camila Garcia</h3>
                 <p class="text">Marketing</p>
-                <div class="social-container">
-                  <ul class="social-links">
-                    <li class="social-link">
-                      <a href="https://www.instagram.com">
-                        <svg class="social-icon">
-                          <use href="./images/icons.svg#instagram-2" width="40" height="40"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-link">
-                      <a href="https://www.twitter.com">
-                        <svg class="social-icon">
-                          <use href="./images/icons.svg#twitter-1" width="40" height="40"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-link">
-                      <a href="https://www.facebook.com">
-                        <svg class="social-icon">
-                          <use href="./images/icons.svg#facebook-1" width="40" height="40"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-link">
-                      <a href="https://www.linkedin.com">
-                        <svg class="social-icon">
-                          <use href="./images/icons.svg#linkedin-1" width="40" height="40"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                <ul class="social-links">
+                  <li class="social-link">
+                    <a href="https://www.instagram.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#instagram-2" width="40" height="40"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.twitter.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#twitter-1" width="40" height="40"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.facebook.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#facebook-1" width="40" height="40"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.linkedin.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#linkedin-1" width="40" height="40"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-list">
@@ -209,38 +203,36 @@
               <div class="our-team-names">
                 <h3 class="text-title">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
-                <div class="social-container">
-                  <ul class="social-links">
-                    <li class="social-link">
-                      <a href="https://www.instagram.com">
-                        <svg class="social-icon">
-                          <use href="./images/icons.svg#instagram-2" width="40" height="40"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-link">
-                      <a href="https://www.twitter.com">
-                        <svg class="social-icon">
-                          <use href="./images/icons.svg#twitter-1" width="40" height="40"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-link">
-                      <a href="https://www.facebook.com">
-                        <svg class="social-icon">
-                          <use href="./images/icons.svg#facebook-1" width="40" height="40"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-link">
-                      <a href="https://www.linkedin.com">
-                        <svg class="social-icon">
-                          <use href="./images/icons.svg#linkedin-1" width="40" height="40"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                <ul class="social-links">
+                  <li class="social-link">
+                    <a href="https://www.instagram.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#instagram-2" width="40" height="40"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.twitter.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#twitter-1" width="40" height="40"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.facebook.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#facebook-1" width="40" height="40"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link">
+                    <a href="https://www.linkedin.com">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#linkedin-1" width="40" height="40"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -325,29 +317,29 @@
           <ul class="social-links">
             <li class="social-link">
               <a class="footer-link" href="https://www.instagram.com">
-                <svg class="social-icon">
-                  <use href="./images/icons.svg#instagram-2" width="24" height="24"></use>
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
               <a class="footer-link" href="https://www.twitter.com">
-                <svg class="social-icon">
-                  <use href="./images/icons.svg#twitter-1" width="24" height="24"></use>
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
               <a class="footer-link" href="https://www.facebook.com">
-                <svg class="social-icon">
-                  <use href="./images/icons.svg#facebook-1" width="24" height="24"></use>
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
               <a class="footer-link" href="https://www.linkedin.com">
-                <svg class="social-icon">
-                  <use href="./images/icons.svg#linkedin-1" width="24" height="24"></use>
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#linkedin-1"></use>
                 </svg>
               </a>
             </li>
