--- a/index.html
+++ b/index.html
@@ -94,30 +94,30 @@
                 <p class="text">Product Designer</p>
                 <ul class="social-links">
                   <li class="social-link">
-                    <a href="https://www.instagram.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#instagram-2" width="40" height="40"></use>
+                    <a class="social-linka" href="https://www.instagram.com">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link">
-                    <a href="https://www.twitter.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#twitter-1" width="40" height="40"></use>
+                    <a class="social-linka" href="https://www.twitter.com">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link">
-                    <a href="https://www.facebook.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#facebook-1" width="40" height="40"></use>
+                    <a class="social-linka" href="https://www.facebook.com">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link">
-                    <a href="https://www.linkedin.com">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#linkedin-1" width="40" height="40"></use>
+                    <a class="social-linka" href="https://www.linkedin.com">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
